# song_weaver

./: .replit  README.md  RUN_GPU_WORKER.md  RUN_SONG_GEN.md  pyproject.toml  replit.md
attached_assets/: Pasted--Worker-returned-HTTP-500-detail-Inference-failed-Faile_1775086117005.txt  Pasted--venv-root-ubuntu-song-weaver-artifacts-gpu-worker-pyth_1775058094813.txt  Pasted--venv-root-ubuntu-song-weaver-artifacts-gpu-worker-pyth_1775058476616.txt  Pasted--venv-root-ubuntu-song-weaver-artifacts-gpu-worker-pyth_1775061827442.txt  Pasted--venv-root-ubuntu-song-weaver-artifacts-gpu-worker-pyth_1775080188934.txt  Pasted--venv-root-ubuntu-song-weaver-artifacts-gpu-worker-pyth_1775080889672.txt  Pasted--venv-root-ubuntu-song-weaver-artifacts-gpu-worker-pyth_1775081868040.txt  Pasted--venv-root-ubuntu-song-weaver-artifacts-gpu-worker-pyth_1775082676002.txt  Pasted--venv-root-ubuntu-song-weaver-artifacts-gpu-worker-pyth_1775087858287.txt  Pasted--xcodec-m-a-p-xcodec-mini-infer-gpu-worker--17750906114_1775090611480.txt  Pasted-1-14-Generating-18000-tokens-30--1775061910038_1775061910038.txt  Pasted-Please-fully-rewrite-the-README-md-for-this-project-so-_1775102671389.txt  Pasted-Technical-Specification-Fix-YuE-Model-Loading-and-Infer_1775055908206.txt  Pasted-Technical-Specification-Integrate-YuE-Model-into-Song-W_1775033956201.txt  Pasted-Technical-brief-GPU-worker-XCodec2-codec-loading-failur_1775081988471.txt  Pasted-root-ubuntu-tree-xcodec-root-xcodec-README-md-RepCodec-_1775088153263.txt  branding-1775087245924.json  content-1775062600676.md  content-1775087239817.md  (+1 more)
(+34 files in other folders)
