[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==24.1.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "jinja2==3.1.4",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.34.0",
]
